welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: not found: value indice
    marquageSol(tab(indice+1))
                    ^